# openai-project

./: Dockerfile  Makefile  README.md  app.py  bot.py  compose.yaml  pyproject.toml
commons/: utils.py
commons/loggerfactory/: __init__.py
resources/: logging.ini
scripts/: components.py  gradio_ui.py
scripts/bots/: gradio_bot.py  terminal_bot.py
scripts/io/: __init__.py  terminal.py
system_prompts/: citi_cards.txt  financial_bot.txt
system_prompts/rick_and_morty/: System_prompt.txt
