[tool.poetry]
name = "openai-project"
version = "0.1.0"
description = ""
authors = ["rahul38888 <rahul38888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
openai = "1.46.0"
gradio = "4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
